LED_BUTTON.prj.sdk/.metadata/.plugins/org.eclipse.cdt.ui/LED_BUTTON.build.log
22:27:29 **** Auto Build of configuration Debug for project LED_BUTTON ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/LED_test_tut_1C.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/LED_test_tut_1C.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../LED_BUTTON_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/LED_test_tut_1C.d" -MT"src/LED_test_tut_1C.o" -o "src/LED_test_tut_1C.o" "../src/LED_test_tut_1C.c"
../src/LED_test_tut_1C.c: In function 'LEDOutputExample':
../src/LED_test_tut_1C.c:67:30: error: 'BTNInst' undeclared (first use in this function)
   Status = XGpio_Initialize(&BTNInst, BTNS_DEVICE_ID);
                              ^~~~~~~
../src/LED_test_tut_1C.c:67:30: note: each undeclared identifier is reported only once for each function it appears in
../src/LED_test_tut_1C.c:70:27: error: 'LEDInst' undeclared (first use in this function)
   XGpio_SetDataDirection(&LEDInst, 1, 0x00);
                           ^~~~~~~
make: *** [src/subdir.mk:23: src/LED_test_tut_1C.o] Error 1

22:27:30 Build Finished (took 871ms)

